simplified HTML/CSS structures

--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
 	<title>Horiseon</title>
 </head>
 
-<!-- 
-   * alt tags in images [x]
-   * semantic elements [x]
-   * title [x]
-   * accessibility [x]
-   * heading attributes in sequential order ?
- -->
-
 <body>
 	
 	<header>
@@ -37,7 +29,7 @@
 	<div class="hero"></div>
 
 	<section class="content">
-		<div id="search-engine-optimization" class="search-engine-optimization">
+		<div id="search-engine-optimization">
 			<img src="./images/search-engine-optimization.jpg" class="float-left" alt="Desk with assorted elements" />
 			<h2>Search Engine Optimization</h2>
 			<p>The dominance of mobile internet use means that users are searching for the right 
@@ -46,7 +38,7 @@
 				customers for your business.</p>
 		</div>
 
-		<div id="online-reputation-management" class="online-reputation-management">
+		<div id="online-reputation-management">
 			<img src="./images/online-reputation-management.jpg" class="float-right" alt="Laptop" />
 			<h2>Online Reputation Management</h2>
 			<p>The web is full of opinions, and some of these can be negative. Social media allows 
@@ -55,7 +47,7 @@
 				see when they search for your business.</p>
 		</div>
 
-		<div id="social-media-marketing" class="social-media-marketing">
+		<div id="social-media-marketing">
 			<img src="./images/social-media-marketing.jpg" class="float-left" alt="Desk with images"/>
 			<h2>Social Media Marketing</h2>
 			<p>Social media continues to have a sizable influence on buying habits. Social media 
@@ -65,19 +57,19 @@
 	</section>
 
 	<aside class="benefits">
-		<div class="benefit-lead">
+		<div>
 			<h3>Lead Generation</h3>
 			<img src="./images/lead-generation.png" alt="Lead Generation Logo" />
 			<p>Inbound strategies for lead generation require less work for your business, bringing 
 				customers directly to your website.</p>
 		</div>
-		<div class="benefit-brand">
+		<div>
 			<h3>Brand Awareness</h3>
 			<img src="./images/brand-awareness.png" alt="Brand Awareness Logo" />
 			<p>Users find your business through paid and organic searches, increasing the search 
 				ranking and visibility for your business.</p>
 		</div>
-		<div class="benefit-cost">
+		<div>
 			<h3>Cost Management</h3>
 			<img src="./images/cost-management.png" alt="Benefit Cost Logo" />
 			<p>As the search ranking for your business increases, your advertising costs decrease, 
@@ -87,9 +79,7 @@
 
 	<footer>
 		<h2>Made with ❤️️ by Horiseon</h2>
-		<p>
-			&copy; 2019 Horiseon Social Solution Services, Inc.
-		</p>
+		<p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
 	</footer>
 
 </body>
